Bug 1921563 - Run snap build on Ubuntu 24.04 r=releng-reviewers,taskgraph-reviewers,jcristau
Differential Revision: https://phabricator.services.mozilla.com/D205705

UltraBlame original commit: 78c64002eefcc27f3669db28394a9fbd2f13361d

--- a/taskcluster/docker/debian-raw/Dockerfile
+++ b/taskcluster/docker/debian-raw/Dockerfile
@@ -137,6 +137,51 @@ ARG
 SNAPSHOT
 ARG
 TASKCLUSTER_ROOT_URL
+RUN
+if
+[
+-
+f
+/
+etc
+/
+apt
+/
+sources
+.
+list
+.
+d
+/
+ubuntu
+.
+sources
+]
+;
+then
+mv
+/
+etc
+/
+apt
+/
+sources
+.
+list
+.
+d
+/
+ubuntu
+.
+sources
+/
+etc
+/
+apt
+/
+;
+fi
+;
 #
 Set
 apt
@@ -701,6 +746,45 @@ preferences
 d
 /
 99taskcluster
+RUN
+if
+[
+-
+f
+/
+etc
+/
+apt
+/
+ubuntu
+.
+sources
+]
+;
+then
+mv
+/
+etc
+/
+apt
+/
+ubuntu
+.
+sources
+/
+etc
+/
+apt
+/
+sources
+.
+list
+.
+d
+/
+;
+fi
+;
 RUN
 apt
 -
