--- a/taskcluster/docker/snap-coreXX-build/Dockerfile
+++ b/taskcluster/docker/snap-coreXX-build/Dockerfile
@@ -80,6 +80,8 @@ builds
 worker
 /
 checkouts
+ARG
+EXTRA_PACKAGES
 RUN
 apt
 -
@@ -101,9 +103,7 @@ essential
 \
 curl
 \
-libavcodec58
-\
-libavutil56
+EXTRA_PACKAGES
 \
 jq
 \
@@ -160,28 +160,6 @@ install
 snap
 .
 sh
-core20
-#
-Snapcraft
-snap
-depends
-on
-core20
-for
-python3
-.
-8
-even
-when
-we
-target
-core22
-RUN
-install
--
-snap
-.
-sh
 snapcraft
 RUN
 install
@@ -189,7 +167,7 @@ install
 snap
 .
 sh
-core22
+SNAP_BASE
 ARG
 SNAP_LIST
 RUN
@@ -455,6 +433,21 @@ SNAP_ARCH
 "
 amd64
 "
+ENV
+SNAP_INSTANCE_KEY
+=
+ENV
+SNAP_INSTANCE_NAME
+=
+snapcraft
+ENV
+SNAPCRAFT_BUILD_FOR
+=
+amd64
+ENV
+SNAPCRAFT_PLATFORM
+=
+amd64
 #
 Snapcraft
 pull
