--- a/taskcluster/kinds/docker-image/kind.yml
+++ b/taskcluster/kinds/docker-image/kind.yml
@@ -614,6 +614,30 @@ raw
 arch
 :
 arm64
+ubuntu2404
+-
+raw
+:
+symbol
+:
+I
+(
+ub24
+-
+raw
+)
+definition
+:
+debian
+-
+raw
+args
+:
+BASE_IMAGE
+:
+ubuntu
+:
+noble
 ubuntu2004
 -
 packages
@@ -656,6 +680,28 @@ packages
 parent
 :
 ubuntu2204
+-
+raw
+ubuntu2404
+-
+packages
+:
+symbol
+:
+I
+(
+ub24
+-
+pkg
+)
+definition
+:
+debian
+-
+packages
+parent
+:
+ubuntu2404
 -
 raw
 ubuntu2004
@@ -773,6 +819,40 @@ zstandard
 arch
 :
 arm64
+ubuntu2404
+-
+base
+:
+symbol
+:
+I
+(
+ub24
+-
+base
+)
+definition
+:
+debian
+-
+base
+parent
+:
+ubuntu2404
+-
+raw
+packages
+:
+-
+ub24
+-
+mercurial
+-
+ub24
+-
+python
+-
+zstandard
 #
 Neither
 the
@@ -1593,6 +1673,7 @@ core22
 SNAP_LIST
 :
 "
+core20
 gnome
 -
 42
@@ -1610,6 +1691,68 @@ gnome
 2204
 -
 sdk
+"
+EXTRA_PACKAGES
+:
+"
+libavcodec58
+libavutil56
+"
+snap
+-
+build
+-
+core24
+:
+symbol
+:
+I
+(
+snap24
+-
+build
+)
+parent
+:
+ubuntu2404
+-
+base
+definition
+:
+snap
+-
+coreXX
+-
+build
+args
+:
+SNAP_BASE
+:
+core24
+SNAP_LIST
+:
+"
+core22
+gnome
+-
+46
+-
+2404
+gtk
+-
+common
+-
+themes
+gnome
+-
+46
+-
+2404
+-
+sdk
+mesa
+-
+2404
 "
 android
 -
