--- a/taskcluster/kinds/snap-upstream-build/kind.yml
+++ b/taskcluster/kinds/snap-upstream-build/kind.yml
@@ -119,6 +119,8 @@ b
 -
 linux
 -
+xlarge
+-
 gcp
 run
 :
@@ -147,21 +149,6 @@ worker
 /
 artifacts
 /
-docker
--
-image
-:
-{
-in
--
-tree
-:
-snap
--
-build
--
-core22
-}
 max
 -
 run
@@ -239,6 +226,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core24
+}
 max
 -
 run
@@ -329,6 +331,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core24
+}
 max
 -
 run
@@ -415,6 +432,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -505,6 +537,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -591,6 +638,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -681,6 +743,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -767,6 +844,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -857,6 +949,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -944,6 +1051,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -1037,6 +1159,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core22
+}
 max
 -
 run
@@ -1128,6 +1265,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core24
+}
 max
 -
 run
@@ -1221,6 +1373,21 @@ type
 generic
 worker
 :
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+snap
+-
+build
+-
+core24
+}
 max
 -
 run
