--- a/taskcluster/docker/debian-base/Dockerfile
+++ b/taskcluster/docker/debian-base/Dockerfile
@@ -10,6 +10,28 @@ mozilla
 com
 >
 #
+Ubuntu
+24
+.
+04
+now
+ships
+with
+user
+1000
+.
+.
+.
+RUN
+userdel
+-
+-
+remove
+ubuntu
+|
+|
+true
+#
 #
 #
 Add
