Bug 1919493 - IDB: Add support for pausing QM IO thread after finishing database initialization; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D220246

UltraBlame original commit: eb5dc473f9bb723ccad7d8e9cb91ac4aeea2043e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -18403,6 +18403,40 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+slow
+down
+database
+initialization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+indexedDB
+.
+databaseInitialization
+.
+pauseOnIOThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
 How
 innerWidth
 /
