Bug 1919493 - Add a test for origin clearing requested right after starting database work for IDB; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D220247

UltraBlame original commit: 98633372fc8ca0b5f7dd9ed7b9fa413d752848f3

--- a/dom/indexedDB/test/unit/xpcshell-parent-process.toml
+++ b/dom/indexedDB/test/unit/xpcshell-parent-process.toml
@@ -422,6 +422,22 @@ js
 ]
 [
 "
+test_slowDatabaseInitialization
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+true
+"
+]
+[
+"
 test_slowStorageInitialization
 .
 js
