Bug 1920545 - cleanup skip-if statements for toolkit browser-chrome .toml files. r=aryx,extension-reviewers,application-update-reviewers,pip-reviewers,credential-management-reviewers,nalexander,robwu,dimi,mconley
Differential Revision: https://phabricator.services.mozilla.com/D223234

UltraBlame original commit: 675d3ca4188ed56024b55f677e9a3cfc6c9c60b3

--- a/toolkit/components/aboutconfig/test/browser/browser.toml
+++ b/toolkit/components/aboutconfig/test/browser/browser.toml
@@ -1,27 +1,6 @@
 [
 DEFAULT
 ]
-skip
--
-if
-=
-[
-"
-debug
-"
-#
-Bug
-1507747
-"
-asan
-"
-#
-Bug
-1520398
-"
-tsan
-"
-]
 support
 -
 files
@@ -77,7 +56,6 @@ linux
 &
 ccov
 "
-]
 #
 Bug
 1613515
@@ -91,6 +69,39 @@ Linux
 coverage
 builds
 .
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+tsan
+"
+]
 [
 "
 browser_locked
@@ -121,10 +132,9 @@ linux
 &
 ccov
 "
-]
 #
 Bug
-1614978
+1613515
 the
 test
 consistently
@@ -135,6 +145,39 @@ Linux
 coverage
 builds
 .
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+tsan
+"
+]
 [
 "
 browser_search
