--- a/toolkit/components/pdfjs/test/browser.toml
+++ b/toolkit/components/pdfjs/test/browser.toml
@@ -29,13 +29,12 @@ browser_pdfjs_alttext_load_engine
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
 nightly_build
 "
 ]
@@ -49,13 +48,12 @@ browser_pdfjs_alttext_telemetry
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
 nightly_build
 "
 ]
@@ -69,13 +67,12 @@ browser_pdfjs_alttext_two_tabs
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
 nightly_build
 "
 ]
@@ -110,12 +107,13 @@ browser_pdfjs_editing_contextmenu
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
+!
 headless
 "
 ]
@@ -360,29 +358,6 @@ browser_pdfjs_octet_stream
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-"
-]
-#
-Bug
-1773830
 support
 -
 files
@@ -497,20 +472,6 @@ js
 browser_pdfjs_update_preferences
 .
 js
-"
-]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-android
-'
 "
 ]
 [
