--- a/toolkit/components/pictureinpicture/tests/browser.toml
+++ b/toolkit/components/pictureinpicture/tests/browser.toml
@@ -578,39 +578,6 @@ browser_contextMenu
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-os_version
-=
-=
-'
-18
-.
-04
-'
-"
-]
-#
-Bug
-1569205
 [
 "
 browser_controlsHover
@@ -665,11 +632,58 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
-]
 #
 Bug
 1840716
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1840716
+]
 [
 "
 browser_durationChange
@@ -699,12 +713,6 @@ linux
 &
 &
 ccov
-"
-#
-Bug
-1678091
-"
-tsan
 "
 #
 Bug
@@ -739,6 +747,90 @@ os_version
 .
 04
 '
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+asan
+"
+#
+Bug
+1775867
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+tsan
+"
+#
+Bug
+1775867
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+swgl
 "
 #
 Bug
@@ -750,37 +842,6 @@ browser_fullscreen
 .
 js
 "
-]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-debug
-"
-#
-Bug
-1566173
-"
-os
-=
-=
-'
-linux
-'
-"
-#
-Bug
-1664667
 ]
 [
 "
@@ -865,36 +926,6 @@ browser_mouseButtonVariation
 .
 js
 "
-]
-skip
--
-if
-=
-[
-"
-debug
-"
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-!
-debug
-"
-#
-Bug
-1549875
 ]
 [
 "
@@ -999,6 +1030,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
@@ -1030,31 +1079,29 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
+]
 #
 Bug
 1673465
-"
-os
-=
-=
-'
-win
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-debug
-"
-#
-Bug
-1683002
-]
 [
 "
 browser_shortcutsAfterFocus
@@ -1062,32 +1109,6 @@ browser_shortcutsAfterFocus
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-win
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-debug
-"
-]
-#
-Bug
-1683002
 [
 "
 browser_showMessage
@@ -1102,32 +1123,6 @@ browser_smallVideoLayout
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-win
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-debug
-"
-]
-#
-Bug
-1683002
 [
 "
 browser_stripVideoStyles
@@ -1191,44 +1186,6 @@ browser_toggleAfterTabTearOutIn
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-"
-#
-Bug
-1605546
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-!
-debug
-"
-#
-Bug
-1605546
-]
 [
 "
 browser_toggleButtonOnNanDuration
@@ -1236,27 +1193,6 @@ browser_toggleButtonOnNanDuration
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-!
-debug
-"
-]
-#
-Bug
-1700504
 support
 -
 files
@@ -1303,34 +1239,6 @@ browser_toggleMode_2
 .
 js
 "
-]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-"
-#
-Bug
-1654971
-"
-os
-=
-=
-'
-mac
-'
-"
-#
-Bug
-1654971
 ]
 [
 "
@@ -1386,38 +1294,6 @@ browser_togglePolicies
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-"
-#
-Bug
-1605565
-"
-apple_catalina
-&
-&
-debug
-"
-#
-Bug
-1605565
-]
 [
 "
 browser_togglePositionChange
@@ -1425,33 +1301,6 @@ browser_togglePositionChange
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-!
-debug
-"
-]
-#
-Bug
-1738532
 [
 "
 browser_toggleSimple
@@ -1459,23 +1308,6 @@ browser_toggleSimple
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-"
-]
-#
-Bug
-1546455
 [
 "
 browser_toggleTransparentOverlay
@@ -1485,29 +1317,6 @@ browser_toggleTransparentOverlay
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-"
-]
-#
-Bug
-1552288
 [
 "
 browser_toggleTransparentOverlay
@@ -1517,39 +1326,6 @@ browser_toggleTransparentOverlay
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-os_version
-=
-=
-'
-18
-.
-04
-'
-"
-]
-#
-Bug
-1546930
 [
 "
 browser_toggle_enabled
