--- a/toolkit/components/printing/tests/browser.toml
+++ b/toolkit/components/printing/tests/browser.toml
@@ -276,45 +276,40 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
 tsan
 "
 #
 Bug
 1683730
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-debug
-"
-#
-Bug
-1683279
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-asan
-"
-#
-Bug
-1683279
 ]
 [
 "
