--- a/toolkit/content/tests/browser/browser.toml
+++ b/toolkit/content/tests/browser/browser.toml
@@ -115,7 +115,36 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 tsan
+&
+&
+swgl
 "
 ]
 #
@@ -155,6 +184,35 @@ if
 =
 [
 "
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+opt
+&
+&
 socketprocess_networking
 "
 ]
@@ -165,18 +223,6 @@ browser_autoscroll_disabled
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-true
-"
-]
-#
-Bug
-1312652
 [
 "
 browser_autoscroll_disabled_on_editable_content
@@ -248,18 +294,22 @@ win
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+11
+.
+2009
+'
 &
 &
-(
-debug
-|
-|
-asan
-)
+processor
+=
+=
+'
+x86_64
+'
 "
 "
 os
@@ -270,10 +320,31 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
+a11y_checks
+&
+&
+swgl
 "
 #
 Bug
@@ -326,31 +397,6 @@ browser_bug1170531
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-!
-debug
-&
-&
-!
-ccov
-"
-]
-#
-Bug
-1647973
 [
 "
 browser_bug1198465
@@ -657,85 +703,6 @@ tags
 "
 audiochannel
 "
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-os_version
-=
-=
-'
-10
-.
-15
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-"
-#
-Bug
-1524746
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-os_version
-=
-=
-'
-11
-.
-20
-'
-&
-&
-arch
-=
-=
-'
-aarch64
-'
-"
-#
-Bug
-1524746
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-!
-debug
-"
-#
-Bug
-1524746
-]
 [
 "
 browser_delay_autoplay_webAudio
@@ -762,39 +729,6 @@ browser_findbar
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-64
-&
-&
-os_version
-=
-=
-'
-18
-.
-04
-'
-"
-]
-#
-Bug
-1614739
 [
 "
 browser_findbar_disabled_manual
@@ -1060,12 +994,76 @@ if
 =
 [
 "
-debug
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+swgl
+&
+&
+asan
 "
-]
 #
 Bug
 1388959
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+socketprocess_networking
+"
+#
+Bug
+1388959
+]
 [
 "
 browser_richlistbox_keyboard
