--- a/toolkit/mozapps/extensions/test/browser/browser.toml
+++ b/toolkit/mozapps/extensions/test/browser/browser.toml
@@ -290,31 +290,6 @@ browser_theme
 xpi
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-asan
-"
-#
-Bug
-1713895
--
-new
-Fission
-platform
-triage
-]
 prefs
 =
 [
@@ -395,14 +370,14 @@ browser_colorwaybuiltins_migration
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 appname
-!
+=
 =
 '
 firefox
@@ -528,7 +503,39 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+&
+&
 a11y_checks
+&
+&
+swgl
 "
 ]
 #
