--- a/toolkit/mozapps/extensions/test/xpinstall/browser.toml
+++ b/toolkit/mozapps/extensions/test/xpinstall/browser.toml
@@ -268,26 +268,6 @@ true
 #
 Bug
 1737265
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-debug
-"
-]
-#
-Bug
-1590136
 [
 "
 browser_bug540558
@@ -454,39 +434,6 @@ true
 #
 Bug
 1737265
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-win
-'
-&
-&
-os_version
-=
-=
-'
-10
-.
-2009
-'
-&
-&
-bits
-=
-=
-64
-"
-#
-Bug
-1615449
-]
 [
 "
 browser_empty
@@ -660,13 +607,12 @@ browser_newwindow
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-!
 debug
 "
 ]
@@ -703,22 +649,6 @@ true
 #
 Bug
 1737265
-skip
--
-if
-=
-[
-"
-debug
-"
-]
-#
-Bug
-1541577
--
-leaks
-on
-debug
 [
 "
 browser_relative
@@ -778,12 +708,13 @@ true
 #
 Bug
 1737265
-skip
+run
 -
 if
 =
 [
 "
+!
 require_signing
 "
 ]
@@ -800,12 +731,13 @@ true
 #
 Bug
 1737265
-skip
+run
 -
 if
 =
 [
 "
+!
 require_signing
 "
 ]
@@ -835,12 +767,13 @@ true
 #
 Bug
 1737265
-skip
+run
 -
 if
 =
 [
 "
+!
 require_signing
 "
 ]
