--- a/toolkit/mozapps/update/tests/browser/browser.toml
+++ b/toolkit/mozapps/update/tests/browser/browser.toml
@@ -86,20 +86,13 @@ enabled
 true
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
-os
-=
-=
-'
-win
-'
-&
-&
+!
 msix
 "
 ]
@@ -266,6 +259,10 @@ os
 '
 win
 '
+&
+&
+!
+msix
 "
 ]
 #
@@ -318,6 +315,10 @@ os
 '
 win
 '
+&
+&
+!
+msix
 "
 ]
 #
@@ -346,18 +347,6 @@ browser_aboutDialog_fc_downloadAuto
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-tsan
-"
-]
-#
-Bug
-1683730
 [
 "
 browser_aboutDialog_fc_downloadAuto_staging
@@ -517,6 +506,10 @@ os
 '
 win
 '
+&
+&
+!
+msix
 "
 ]
 #
@@ -569,13 +562,22 @@ os
 '
 win
 '
+&
+&
+!
+msix
 "
 ]
 #
 "
-Windows
-only
-feature
+test
+must
+be
+able
+to
+prevent
+file
+deletion
 .
 "
 tags
@@ -703,6 +705,10 @@ os
 '
 win
 '
+&
+&
+!
+msix
 "
 ]
 #
