--- a/toolkit/components/windowwatcher/test/browser.toml
+++ b/toolkit/components/windowwatcher/test/browser.toml
@@ -57,8 +57,25 @@ os
 '
 win
 '
+&
+&
+os_version
+=
+=
+'
+11
+.
+2009
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
-]
 #
 Bug
 1276802
@@ -75,6 +92,49 @@ get
 the
 size
 right
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+2009
+'
+&
+&
+processor
+=
+=
+'
+x86
+'
+"
+#
+Bug
+1276802
+-
+Opening
+windows
+from
+content
+on
+Windows
+might
+not
+get
+the
+size
+right
+]
 [
 "
 browser_non_popup_from_popup
@@ -89,43 +149,6 @@ browser_popup_condition_current
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-debug
-"
-#
-Opening
-many
-windows
-takes
-a
-long
-time
-on
-slow
-builds
-"
-tsan
-"
-#
-Opening
-many
-windows
-takes
-a
-long
-time
-on
-slow
-builds
-"
-socketprocess_networking
-"
-]
 [
 "
 browser_popup_condition_tab
@@ -133,84 +156,10 @@ browser_popup_condition_tab
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-debug
-"
-#
-Opening
-many
-windows
-takes
-a
-long
-time
-on
-slow
-builds
-"
-tsan
-"
-#
-Opening
-many
-windows
-takes
-a
-long
-time
-on
-slow
-builds
-"
-socketprocess_networking
-"
-]
 [
 "
 browser_popup_condition_window
 .
 js
-"
-]
-skip
--
-if
-=
-[
-"
-debug
-"
-#
-Opening
-many
-windows
-takes
-a
-long
-time
-on
-slow
-builds
-"
-tsan
-"
-#
-Opening
-many
-windows
-takes
-a
-long
-time
-on
-slow
-builds
-"
-socketprocess_networking
 "
 ]
