--- a/toolkit/crashreporter/test/browser/browser.toml
+++ b/toolkit/crashreporter/test/browser/browser.toml
@@ -50,14 +50,14 @@ browser_cpu_microcode
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-!
+=
 =
 '
 win
@@ -80,29 +80,30 @@ browser_sandbox_crash
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-!
+=
 =
 '
 linux
 '
+&
+&
+!
+release_or_beta
 "
+]
 #
 Linux
 -
 specific
 crash
 type
-"
-release_or_beta
-"
-#
 release
 /
 beta
@@ -113,4 +114,3 @@ crash
 on
 sandbox
 violations
-]
