Bug 1912292 - Run puppeteer tests in several chunks. r=webdriver-reviewers,whimboo,ahal
Differential Revision: https://phabricator.services.mozilla.com/D223500

UltraBlame original commit: 116ba4014954973d5a094ac8b459c542d15603b3

--- a/taskcluster/kinds/source-test/puppeteer.yml
+++ b/taskcluster/kinds/source-test/puppeteer.yml
@@ -317,6 +317,10 @@ puppeteer
 with
 -
 bidi
+-
+{
+this_chunk
+}
 :
 description
 :
@@ -328,13 +332,33 @@ Webdriver
 BiDi
 remote
 protocol
+chunk
+:
+total
+-
+chunks
+:
+2
+substitution
+-
+fields
+:
+-
+name
+-
+treeherder
+-
+run
 treeherder
 :
 symbol
 :
 Pup
 (
-wd
+Wd
+{
+this_chunk
+}
 )
 run
 :
@@ -427,3 +451,21 @@ worker
 pup_errorsummary
 .
 json
+-
+-
+this
+-
+chunk
+=
+{
+this_chunk
+}
+-
+-
+total
+-
+chunks
+=
+{
+total_chunks
+}
