Bug 1921278 [wpt PR 48350] - Update wpt metadata, a=testonly
wpt-pr: 48350
wpt-type: metadata

UltraBlame original commit: 606c620439d9648d067133392e1735b338b2bea3

--- a/testing/web-platform/meta/css/css-scroll-snap-2/parsing/scroll-start-target-computed.html.ini
+++ b/testing/web-platform/meta/css/css-scroll-snap-2/parsing/scroll-start-target-computed.html.ini
@@ -321,3 +321,33 @@ mode
 expected
 :
 FAIL
+[
+Property
+scroll
+-
+start
+-
+target
+value
+'
+auto
+'
+]
+expected
+:
+FAIL
+[
+Property
+scroll
+-
+start
+-
+target
+value
+'
+none
+'
+]
+expected
+:
+FAIL
