Bug 1921569 - [wpt-sync] Update web-platform-tests to fd25aeb946a8df94314cf6fb4fe63b46eee2cd8c, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: fd25aeb946a8df94314cf6fb4fe63b46eee2cd8c
wpt-type: landing

UltraBlame original commit: 03525b8263ab49b8e7ec639f7cf3d1153d4a7d92

--- a/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
+++ b/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
@@ -20,7 +20,7 @@ and
 not
 debug
 and
-tsan
+fission
 :
 [
 OK
@@ -40,11 +40,11 @@ not
 debug
 and
 not
-tsan
+fission
 :
 [
-OK
 TIMEOUT
+OK
 ]
 [
 Return
@@ -266,6 +266,8 @@ and
 not
 debug
 and
+fission
+and
 tsan
 :
 [
@@ -286,12 +288,34 @@ and
 not
 debug
 and
+fission
+and
 not
 tsan
 :
 [
 PASS
 NOTRUN
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+fission
+:
+[
+NOTRUN
+PASS
 ]
 [
 Cookies
@@ -341,8 +365,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -384,9 +408,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Cookies
@@ -436,8 +460,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -479,9 +503,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 No
@@ -519,8 +543,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -562,9 +586,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 No
@@ -602,8 +626,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -645,9 +669,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 No
@@ -685,8 +709,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -728,9 +752,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Return
@@ -772,8 +796,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -815,9 +839,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Empty
@@ -849,8 +873,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -892,9 +916,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Empty
@@ -926,8 +950,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -969,9 +993,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Empty
@@ -1003,8 +1027,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -1046,9 +1070,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Cookie
@@ -1086,8 +1110,31 @@ linux
 and
 not
 debug
+and
+fission
 :
 [
+PASS
+NOTRUN
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+fission
+:
+[
+TIMEOUT
 PASS
 NOTRUN
 ]
@@ -1162,8 +1209,8 @@ tsan
 :
 [
 PASS
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -1205,9 +1252,9 @@ not
 fission
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
 ]
 [
 Return
