--- a/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
@@ -84,13 +84,53 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 debug
 and
 not
 fission
-and
-not
-swgl
 :
 [
 FAIL
@@ -108,6 +148,9 @@ linux
 and
 not
 debug
+and
+not
+asan
 :
 [
 FAIL
@@ -163,13 +206,53 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 debug
 and
 not
 fission
-and
-not
-swgl
 :
 [
 FAIL
@@ -187,6 +270,9 @@ linux
 and
 not
 debug
+and
+not
+asan
 :
 [
 FAIL
@@ -242,13 +328,53 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 debug
 and
 not
 fission
-and
-not
-swgl
 :
 [
 FAIL
@@ -266,6 +392,9 @@ linux
 and
 not
 debug
+and
+not
+asan
 :
 [
 FAIL
