--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-pause.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-pause.html.ini
@@ -31,6 +31,95 @@ linux
 )
 and
 fission
+and
+not
+asan
+and
+tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+not
+asan
+and
+not
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+and
+debug
 :
 [
 FAIL
@@ -48,6 +137,9 @@ linux
 and
 not
 fission
+and
+not
+debug
 :
 [
 PASS
