--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-remove-src.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-remove-src.html.ini
@@ -32,10 +32,41 @@ os
 linux
 "
 )
+and
+not
+asan
+and
+fission
+and
+not
+debug
+and
+tsan
 :
 [
-FAIL
 PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+asan
+and
+fission
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 if
 (
@@ -47,22 +78,45 @@ win
 "
 )
 and
+not
 debug
-and
+:
+FAIL
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
-not
-swgl
+asan
 :
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+FAIL
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
