--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -33,15 +33,54 @@ linux
 )
 and
 not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 tsan
 and
-not
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -64,9 +103,47 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+FAIL
 if
 (
 os
@@ -79,42 +156,6 @@ linux
 and
 tsan
 :
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -147,15 +188,54 @@ linux
 )
 and
 not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 tsan
 and
-not
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -178,9 +258,47 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+FAIL
 if
 (
 os
@@ -193,42 +311,6 @@ linux
 and
 tsan
 :
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -261,15 +343,54 @@ linux
 )
 and
 not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 tsan
 and
-not
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -292,9 +413,47 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+FAIL
 if
 (
 os
@@ -307,42 +466,6 @@ linux
 and
 tsan
 :
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -373,15 +496,54 @@ linux
 )
 and
 not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 tsan
 and
-not
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -404,9 +566,47 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+FAIL
 if
 (
 os
@@ -419,42 +619,6 @@ linux
 and
 tsan
 :
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
@@ -481,15 +645,54 @@ linux
 )
 and
 not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 tsan
 and
-not
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -512,9 +715,47 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+FAIL
 if
 (
 os
@@ -527,42 +768,6 @@ linux
 and
 tsan
 :
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
