--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/module/dynamic-import/microtasks/basic.any.js.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/module/dynamic-import/microtasks/basic.any.js.ini
@@ -8,51 +8,15 @@ html
 expected
 :
 if
-not
-debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
+fission
 :
 [
-TIMEOUT
 OK
-]
-if
-not
-debug
-and
-(
-os
-=
-=
-"
-android
-"
-)
-:
-[
 TIMEOUT
-OK
-]
-if
-debug
-:
-[
-TIMEOUT
-OK
 ]
 [
-OK
 TIMEOUT
+OK
 ]
 [
 import
@@ -86,6 +50,9 @@ html
 expected
 :
 if
+not
+fission
+and
 (
 os
 =
@@ -95,16 +62,25 @@ linux
 "
 )
 and
-tsan
+not
+debug
 :
+[
 TIMEOUT
+OK
+]
 if
+not
+fission
+and
+(
 os
 =
 =
 "
 android
 "
+)
 :
 TIMEOUT
 [
@@ -125,6 +101,9 @@ module
 expected
 :
 if
+not
+fission
+and
 (
 os
 =
@@ -134,16 +113,25 @@ linux
 "
 )
 and
-tsan
+not
+debug
 :
+[
 TIMEOUT
+PASS
+]
 if
+not
+fission
+and
+(
 os
 =
 =
 "
 android
 "
+)
 :
 TIMEOUT
 [
@@ -167,7 +155,11 @@ linux
 "
 )
 and
-tsan
+not
+fission
+and
+not
+debug
 :
 [
 TIMEOUT
@@ -207,6 +199,9 @@ module
 expected
 :
 if
+not
+fission
+and
 (
 os
 =
@@ -216,15 +211,24 @@ linux
 "
 )
 and
-tsan
+not
+debug
 :
+[
 TIMEOUT
+PASS
+]
 if
+not
+fission
+and
+(
 os
 =
 =
 "
 android
 "
+)
 :
 TIMEOUT
