--- a/testing/web-platform/meta/intersection-observer/scroll-margin-dynamic.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-dynamic.html.ini
@@ -43,33 +43,9 @@ tsan
 and
 asan
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-tsan
-and
-not
-asan
-:
-[
-PASS
-FAIL
-]
 if
 (
 os
@@ -80,9 +56,27 @@ android
 "
 )
 and
-not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
