--- a/testing/web-platform/meta/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv.html.ini
@@ -13,13 +13,50 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
-fission
+debug
 :
-[
 TIMEOUT
-OK
+[
+Audit
+report
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+NOTRUN
+[
+Executing
+"
+test
+"
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+TIMEOUT
