--- a/testing/web-platform/meta/css/css-contain/content-visibility/animation-display-lock.html.ini
+++ b/testing/web-platform/meta/css/css-contain/content-visibility/animation-display-lock.html.ini
@@ -10,6 +10,9 @@ html
 expected
 :
 if
+not
+asan
+and
 (
 os
 =
@@ -19,52 +22,29 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
 tsan
-and
-not
-asan
-and
-debug
-and
-fission
 :
 [
 OK
 TIMEOUT
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-tsan
-and
 asan
 :
 [
 OK
 TIMEOUT
 ]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-TIMEOUT
 [
 Animation
 events
@@ -85,6 +65,9 @@ subtree
 expected
 :
 if
+not
+asan
+and
 (
 os
 =
@@ -94,52 +77,29 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
 tsan
-and
-not
-asan
-and
-debug
-and
-fission
 :
 [
 PASS
 TIMEOUT
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-tsan
-and
 asan
 :
 [
 PASS
 TIMEOUT
 ]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-TIMEOUT
 [
 The
 finished
@@ -167,6 +127,9 @@ subtree
 expected
 :
 if
+not
+asan
+and
 (
 os
 =
@@ -176,52 +139,29 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
 tsan
-and
-not
-asan
-and
-debug
-and
-fission
 :
 [
 PASS
 NOTRUN
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-tsan
-and
 asan
 :
 [
 PASS
 NOTRUN
 ]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-NOTRUN
 [
 The
 finished
@@ -249,6 +189,9 @@ subtree
 expected
 :
 if
+not
+asan
+and
 (
 os
 =
@@ -258,52 +201,29 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
 tsan
-and
-not
-asan
-and
-debug
-and
-fission
 :
 [
 PASS
 NOTRUN
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-tsan
-and
 asan
 :
 [
 PASS
 NOTRUN
 ]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-NOTRUN
 [
 Events
 and
@@ -321,6 +241,9 @@ element
 expected
 :
 if
+not
+asan
+and
 (
 os
 =
@@ -330,49 +253,26 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
 tsan
-and
-not
-asan
-and
-debug
-and
-fission
 :
 [
 PASS
 NOTRUN
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-tsan
-and
 asan
 :
 [
 PASS
 NOTRUN
 ]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-NOTRUN
