--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-same.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-same.tentative.https.window.js.ini
@@ -15,6 +15,40 @@ window
 .
 html
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+asan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+tsan
+:
+[
+OK
+TIMEOUT
+]
 [
 Verify
 same
