--- a/testing/web-platform/meta/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html.ini
+++ b/testing/web-platform/meta/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html.ini
@@ -27,6 +27,18 @@ mac
 OK
 TIMEOUT
 ]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+OK
+]
 [
 animation
 -
@@ -112,8 +124,8 @@ mac
 :
 [
 FAIL
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 FAIL
 [
@@ -158,7 +170,19 @@ mac
 :
 [
 FAIL
+TIMEOUT
 NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
 TIMEOUT
 ]
 FAIL
@@ -205,6 +229,19 @@ mac
 FAIL
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
 FAIL
 [
 animation
@@ -251,6 +288,18 @@ mac
 [
 FAIL
 NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+NOTRUN
+FAIL
 ]
 FAIL
 [
@@ -303,6 +352,19 @@ mac
 FAIL
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+NOTRUN
+FAIL
+TIMEOUT
+]
 FAIL
 [
 animation
@@ -326,6 +388,19 @@ mac
 :
 [
 FAIL
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
 NOTRUN
 ]
 FAIL
@@ -353,6 +428,18 @@ mac
 FAIL
 NOTRUN
 ]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+NOTRUN
+FAIL
+]
 FAIL
 [
 animation
@@ -378,6 +465,18 @@ mac
 [
 FAIL
 NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+NOTRUN
+FAIL
 ]
 FAIL
 [
