--- a/testing/web-platform/meta/webrtc-stats/rtp-stats-creation.html.ini
+++ b/testing/web-platform/meta/webrtc-stats/rtp-stats-creation.html.ini
@@ -53,12 +53,21 @@ win
 "
 )
 and
+not
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 PASS
-FAIL
-TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -72,10 +81,37 @@ win
 and
 not
 debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
+FAIL
 NOTRUN
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+TIMEOUT
 ]
 if
 (
@@ -215,6 +251,41 @@ win
 and
 not
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
