Bug 1919507 - Cache: Add support for pausing QM IO thread after finishing database initialization; r=dom-storage-reviewers,asuth
Differential Revision: https://phabricator.services.mozilla.com/D220261

UltraBlame original commit: df1b764f6b36fc63d11d92159e395c9acca42d5e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -15282,6 +15282,40 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+slow
+down
+database
+initialization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+cache
+.
+databaseInitialization
+.
+pauseOnIOThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
 Disable
 capture
 attribute
