--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -6693,6 +6693,68 @@ well
 "
 [
 "
+test_trr_https_rr_with_cname
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+msix
+"
+#
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1808049
+]
+run
+-
+sequentially
+=
+"
+node
+server
+exceptions
+dont
+replay
+well
+"
+[
+"
 test_trr_httpssvc
 .
 js
