Bug 1922244 - Move web compat addons from the wiki to mots r=denschub,zeid,twisniewski DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D224316

UltraBlame original commit: 51120352154291424b154e7f51dd16599ea578c0

--- a/mots.yaml
+++ b/mots.yaml
@@ -118,15 +118,15 @@ updated_at
 '
 2024
 -
-09
+10
 -
-24T19
+02T13
 :
-42
+02
 :
-20
+32
 .
-527455
+808243
 +
 00
 :
@@ -1060,6 +1060,19 @@ Stefan
 nick
 :
 deian
+-
+&
+denschub
+bmo_id
+:
+421268
+name
+:
+Dennis
+Schubert
+nick
+:
+denschub
 -
 &
 Dexter
@@ -2354,6 +2367,19 @@ nick
 kshampur
 -
 &
+ksy36
+bmo_id
+:
+638886
+name
+:
+Ksenia
+Berezina
+nick
+:
+ksy36
+-
+&
 kvark
 bmo_id
 :
@@ -3593,6 +3619,19 @@ Schuster
 nick
 :
 tschuster
+-
+&
+twisniewski
+bmo_id
+:
+583576
+name
+:
+Thomas
+Wisniewski
+nick
+:
+twisniewski
 -
 &
 TYLin
@@ -18342,6 +18381,114 @@ ui_widgets
 -
 name
 :
+WebCompat
+Addons
+description
+:
+Compatibility
+interventions
+(
+webcompat
+system
+addon
+)
+and
+bug
+reporting
+capabilities
+(
+Report
+Site
+Issue
+addon
+)
+.
+includes
+:
+-
+browser
+/
+extensions
+/
+webcompat
+-
+browser
+/
+extensions
+/
+report
+-
+site
+-
+issue
+-
+mobile
+/
+android
+/
+extensions
+/
+webcompat
+-
+mobile
+/
+android
+/
+extensions
+/
+report
+-
+site
+-
+issue
+-
+toolkit
+/
+components
+/
+reportbrokensite
+-
+https
+:
+/
+/
+github
+.
+com
+/
+mozilla
+-
+extensions
+/
+webcompat
+-
+addon
+meta
+:
+peers_emeritus
+:
+-
+Mike
+Taylor
+owners
+:
+-
+*
+denschub
+-
+*
+twisniewski
+peers
+:
+-
+*
+ksy36
+machine_name
+:
+webcompat_addons
+-
+name
+:
 Webextensions
 description
 :
@@ -18716,7 +18863,7 @@ hashes
 :
 config
 :
-c553dddcf95c38bb40ec19993737429db70a7f10
+49e5007f7ab2212f83ed59b912ec9b4cda95470d
 export
 :
-0507cf09026c0c67941b3a7ba59c6bfd266680ac
+bf7c97134884870f26d69b1d6c59fd977f9104f4
