Bug 1922244 - mots: update the path of web compat addons r=denschub DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D224330

UltraBlame original commit: c6cdc5db19a44324f0200364f38eac0e4da5ef25

--- a/mots.yaml
+++ b/mots.yaml
@@ -122,11 +122,11 @@ updated_at
 -
 02T13
 :
-02
+57
 :
-32
+00
 .
-808243
+099607
 +
 00
 :
@@ -18410,23 +18410,29 @@ browser
 /
 extensions
 /
-webcompat
+report
+-
+site
+-
+issue
 -
 browser
 /
 extensions
 /
-report
--
-site
--
-issue
+webcompat
 -
 mobile
 /
 android
 /
-extensions
+android
+-
+components
+/
+components
+/
+feature
 /
 webcompat
 -
@@ -18434,13 +18440,17 @@ mobile
 /
 android
 /
-extensions
+android
+-
+components
 /
-report
+components
+/
+feature
+/
+webcompat
 -
-site
--
-issue
+reporter
 -
 toolkit
 /
@@ -18863,7 +18873,7 @@ hashes
 :
 config
 :
-49e5007f7ab2212f83ed59b912ec9b4cda95470d
+8f0912d29beb3dfc1128c5bea212816e70a4b069
 export
 :
-bf7c97134884870f26d69b1d6c59fd977f9104f4
+ced594b446555ffd071183f39b9599540246d445
