Bug 1783170 - disable test_enterjit_osr.js and test_pause.js on Linux ThreadSanitizer for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
The tests failed frequently since the machine type had been changed from
n2-standard-2 to c2-standard-4 in bug 1862675.

Differential Revision: https://phabricator.services.mozilla.com/D224338

UltraBlame original commit: 33f74be8e8197cdbf320d3e3644778ffa50b1c55

--- a/tools/profiler/tests/xpcshell/xpcshell.toml
+++ b/tools/profiler/tests/xpcshell/xpcshell.toml
@@ -129,6 +129,62 @@ test_enterjit_osr
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+tsan
+"
+]
+#
+bug
+1783179
+frequent
+failure
+since
+GCP
+machine
+type
+change
+from
+n2
+-
+standard
+-
+to
+c2
+-
+standard
+-
+4
 [
 "
 test_enterjit_osr_disabling
@@ -638,22 +694,56 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 tsan
-&
-&
-socketprocess_networking
 "
 ]
 #
-Times
-out
-on
-TSan
-and
-socket
-process
 bug
-1878882
+1783179
+frequent
+failure
+since
+GCP
+machine
+type
+change
+from
+n2
+-
+standard
+-
+to
+c2
+-
+standard
+-
+4
 [
 "
 test_responsiveness
