Bug 1917845 - Block and show an install error on new soft-blocked addons versions installs. r=willdurand,fluent-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D222101

UltraBlame original commit: 4f4abfee2548d240a19fcbb11ac9d94f7442e820

--- a/tools/lint/fluent-lint/exclusions.yml
+++ b/tools/lint/fluent-lint/exclusions.yml
@@ -1350,6 +1350,30 @@ process
 type
 -
 privilegedmozilla
+#
+browser
+/
+locales
+/
+en
+-
+US
+/
+browser
+/
+addonNotifications
+.
+ftl
+-
+addon
+-
+install
+-
+error
+-
+soft
+-
+blocked
 files
 :
 -
