Bug 1917846 - Update about addons blocked and softblocked strings (message bar message and link action button strings). r=willdurand,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D222366

UltraBlame original commit: 065e2c390bc49c32c5119ff8ef11e88c787e13bd

--- a/tools/lint/fluent-lint/exclusions.yml
+++ b/tools/lint/fluent-lint/exclusions.yml
@@ -1176,6 +1176,46 @@ plugins
 openh264
 -
 description
+-
+details
+-
+notification
+-
+softblocked
+-
+extension
+-
+disabled
+-
+details
+-
+notification
+-
+softblocked
+-
+extension
+-
+enabled
+-
+details
+-
+notification
+-
+softblocked
+-
+other
+-
+disabled
+-
+details
+-
+notification
+-
+softblocked
+-
+other
+-
+enabled
 #
 toolkit
 /
