Bug 1890306 - Add mitmproxy 10 for use on android performance testing. r=perftest-reviewers,sparky
This patch makes available the mitm 10 binary for android, and at the
moment only runs it on recordings using version 8 as there are errors on
older versions so we might as well wait until we record those.

These subset of sites are bild-de, allrecipes, instagram, and sina

Differential Revision: https://phabricator.services.mozilla.com/D223829

UltraBlame original commit: 8c81f867652d8d131afc9fcb819d5d7000d5928c

--- a/testing/raptor/raptor/tests/tp6/mobile/browsertime-tp6m.toml
+++ b/testing/raptor/raptor/tests/tp6/mobile/browsertime-tp6m.toml
@@ -131,6 +131,15 @@ order
 [
 allrecipes
 ]
+playback_version
+=
+"
+10
+.
+4
+.
+2
+"
 test_url
 =
 "
@@ -227,6 +236,15 @@ bild
 -
 de
 ]
+playback_version
+=
+"
+10
+.
+4
+.
+2
+"
 playback_pageset_manifest
 =
 "
@@ -731,6 +749,15 @@ com
 [
 instagram
 ]
+playback_version
+=
+"
+10
+.
+4
+.
+2
+"
 login
 =
 true
@@ -803,6 +830,15 @@ com
 [
 sina
 ]
+playback_version
+=
+"
+10
+.
+4
+.
+2
+"
 playback_pageset_manifest
 =
 "
