--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -31684,6 +31684,8 @@ bug_numbers
 :
 -
 1654680
+-
+1919180
 description
 :
 >
@@ -31707,6 +31709,35 @@ a
 keyword
 offer
 result
+.
+The
+scalar
+key
+for
+local
+search
+modes
+entered
+using
+a
+restrict
+keyword
+will
+be
+suffixed
+with
+"
+keyword
+"
+.
+For
+example
+:
+tabs_keyword
+bookmarks_keyword
+history_keyword
+and
+actions_keyword
 .
 expires
 :
@@ -32358,6 +32389,8 @@ bug_numbers
 :
 -
 1654680
+-
+1919180
 description
 :
 >
@@ -32379,6 +32412,72 @@ after
 typing
 an
 alias
+.
+The
+scalar
+keys
+for
+local
+search
+modes
+entered
+by
+typing
+a
+restrict
+keyword
+will
+be
+suffixed
+with
+"
+keyword
+"
+.
+For
+example
+:
+tabs_keyword
+bookmarks_keyword
+history_keyword
+and
+actions_keyword
+.
+If
+instead
+search
+mode
+was
+entered
+by
+typing
+a
+restrict
+symbol
+the
+key
+will
+be
+suffixed
+with
+"
+symbol
+"
+(
+e
+.
+g
+.
+typing
+"
+%
+"
+will
+generate
+"
+tabs_symbol
+"
+)
 .
 expires
 :
