--- a/taskcluster/kinds/test/test-platforms.yml
+++ b/taskcluster/kinds/test/test-platforms.yml
@@ -3146,6 +3146,41 @@ android
 -
 hw
 -
+a55
+-
+14
+-
+0
+-
+aarch64
+-
+qr
+/
+opt
+:
+build
+-
+platform
+:
+android
+-
+aarch64
+/
+opt
+test
+-
+sets
+:
+-
+android
+-
+hw
+-
+browsertime
+android
+-
+hw
+-
 s24
 -
 14
