Bug 1922325 - Move tree sheriffs from the wiki to mots r=aryx,zeid DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D224353

UltraBlame original commit: eccc18ef602496022888943620026c8de95b1c58

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-02T13
+02T15
 :
-57
+56
 :
-00
+06
 .
-099607
+539887
 +
 00
 :
@@ -511,6 +511,19 @@ Fujisawa
 nick
 :
 arai
+-
+&
+aryx
+bmo_id
+:
+258347
+name
+:
+Sebastian
+Hengst
+nick
+:
+aryx
 -
 &
 asuth
@@ -3207,6 +3220,19 @@ nick
 ryan
 .
 sleevi
+-
+&
+ryanvm
+bmo_id
+:
+75935
+name
+:
+Ryan
+VanderMeulen
+nick
+:
+ryanvm
 -
 &
 saschanaz
@@ -18727,6 +18753,151 @@ reviewers
 -
 machine_name
 :
+tree_sheriffs
+name
+:
+Tree
+Sheriffs
+description
+:
+Tree
+Sheriffs
+aid
+developers
+to
+easily
+quickly
+and
+seamlessly
+land
+their
+code
+in
+the
+proper
+location
+(
+s
+)
+and
+ensure
+that
+code
+does
+not
+break
+our
+automated
+tests
+.
+In
+the
+service
+of
+this
+objective
+the
+Sheriffs
+work
+closely
+with
+the
+larger
+engineering
+organization
+to
+create
+and
+enforce
+landing
+policies
+that
+increase
+productivity
+while
+maintaining
+an
+efficient
+and
+robust
+automated
+testing
+system
+.
+Beyond
+the
+policy
+role
+they
+have
+also
+become
+shepherds
+of
+automation
+quality
+by
+monitoring
+intermittent
+failures
+performing
+uplifts
+and
+merges
+and
+identifying
+poorly
+performing
+automation
+machines
+.
+meta
+:
+group
+:
+sheriffs
+url
+:
+https
+:
+/
+/
+wiki
+.
+mozilla
+.
+org
+/
+Sheriffing
+owner_emeritus
+:
+-
+*
+ryanvm
+-
+Ed
+Morley
+peers_emeritus
+:
+-
+Carsten
+Book
+-
+Wes
+Kocher
+owners
+:
+-
+*
+aryx
+peers
+:
+-
+*
+ryanvm
+-
+machine_name
+:
 url_classifier
 name
 :
@@ -18873,7 +19044,7 @@ hashes
 :
 config
 :
-8f0912d29beb3dfc1128c5bea212816e70a4b069
+79f14cc4164fc65d8dc5b2a306c189c32c4e70b3
 export
 :
-ced594b446555ffd071183f39b9599540246d445
+9fbd0d53bdcea831091c33f7b4b5a818acd5eade
