Bug 1922244 - mots: add back the web compat details r=denschub,zeid DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D224351

UltraBlame original commit: 6e2eb2aa93733e8f11f0c8e75a1c33f7a754852d

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-02T15
+02T16
 :
-56
+01
 :
-06
+22
 .
-539887
+525107
 +
 00
 :
@@ -18501,11 +18501,45 @@ webcompat
 addon
 meta
 :
+url
+:
+https
+:
+/
+/
+wiki
+.
+mozilla
+.
+org
+/
+Compatibility
+/
+System_Addon
+group
+:
+compatibility
 peers_emeritus
 :
 -
 Mike
 Taylor
+components
+:
+-
+Web
+Compatibility
+:
+:
+Interventions
+-
+Web
+Compatibility
+:
+:
+Tooling
+&
+Investigations
 owners
 :
 -
@@ -19044,7 +19078,7 @@ hashes
 :
 config
 :
-79f14cc4164fc65d8dc5b2a306c189c32c4e70b3
+d230aac53a99098a219aff7776a1eb269ff6fa26
 export
 :
-9fbd0d53bdcea831091c33f7b4b5a818acd5eade
+8879d093cdfcf74d478a2af9a135791b625ca5fd
